--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,21 +31,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Move index.html to root
-        run: |
-          mv templates/index.html ./index.html
-
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
-      - name: Upload artifact
+      - name: Upload static files
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload all files, with index.html in the root
+          # Include the static folder and templates/index.html
           path: |
-            ./
-            assets/
-            templates/
+            static/
+            templates/index.html
 
       - name: Deploy to GitHub Pages
         id: deployment
